# diagrambot-py

./: LICENSE  README.md  app_chat.py  app_voice.py  pyproject.toml  requirements.txt
diagrambot/: __init__.py  chat.py  utils.py  voice.py
diagrambot/assets/www/: personal-instructions.js
diagrambot/prompts/: prompt.md
