[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagrambot"
version = "0.1.0"
description = """
Create Mermaid and Graphviz diagrams using AI through voice commands (GPT-4o Realtime API) 
or text chat. This package provides interactive Shiny for Python interfaces for generating 
various types of diagrams including flowcharts, sequence diagrams, network graphs, and more.
"""
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sam Parmar"}
]
keywords = ["shiny", "python", "diagrams", "mermaid", "graphviz", "visualization", "interactive", "ai", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "shiny>=0.6.0",
    "python-dotenv",
    "shinychat",
    "chatlas",
    "shinyrealtime",
    "faicons",
]

[project.urls]
Homepage = "https://github.com/parmsam/diagrambot-py"
Repository = "https://github.com/parmsam/diagrambot-py"